feat: add jailed remote directory picker
